--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ footer .link-group a: hover{
     color: #fca61f;
 }
 .social-links a{
-    display: flex;
+    display: inline-block;
     justify-content: center;
     align-items: center;
     width: 40px;  /* Adjust as needed */
